# CSRF_agent

./: .gitignore  README.md  Run CSRF v2.command  example.env  pyproject.toml
output.json/: 0a6300a004950a838137348b009500a9_web-security-academy_net
output.txt/: 0a6300a004950a838137348b009500a9_web-security-academy_net
scripts/: go.sh
src/csrf_v2/: crew.py  main.py
src/csrf_v2/config/: agents.yaml  tasks.yaml
